Fix autocomplete dropdown z-index in map/osm field inside MB Blocks

--- a/css/osm.css
+++ b/css/osm.css
@@ -15,9 +15,9 @@ input.ui-autocomplete-input.open {
 	margin: 0;
 	list-style: none;
 	position: absolute;
-	z-index: 10000;
-	border: 1px solid #5b9dd9;
-	box-shadow: 0 1px 2px rgba( 30, 140, 190, 0.8 );
+	z-index: 999999;
+	border: 1px solid #4f94d4;
+	box-shadow: 0 1px 2px rgba(79, 148, 212, 0.8);
 	background-color: #fff;
 }
 
